<resources>
    <string name="app_name" translatable="false">ICT Competency Report App</string>
    <string name="My_Profile">My Profile</string>
    <string name="UsernameHint">Email</string>
    <string name="PasswordHint">Password</string>
    <string name="LoginButton">Login</string>
    <string name="comp_report_button">Competency Report</string>
    <string name="grade_input_button">Grade Input</string>
    <string name="track_quiz_button">Track Questionnaire</string>
    <string name="logout_button">Logout</string>
    <string name="SignUpButton">Signup, Click here !</string>
    <string name="Create_Account_Button">Create Account</string>
    <string name="Already_Mem_Button">Already a member? Login</string>
    <string name="Code_Questionaire">Coding</string>
    <string name="Questionaire_1">1</string>
    <string name="Questionaire_2">2</string>
    <string name="Questionaire_3">3</string>
    <string name="Questionaire_4">4</string>
    <string name="Questionnaire_5">5</string>
    <string name="Questionaire_Label">Rate your score for each criteria (1 - least, 5 - most)</string>
    <string name="Math_Questionnaire">Mathematics</string>
    <string name="Questionnaire_Test">Research</string>
    <string name="Questionnaire_Memorise">Memorise</string>
    <string name="Questionnaire_OpenEnd">Open-end Question</string>
    <string name="Questionnaire_Next">Next</string>
    <string name="Questionnaire_Previous">Reset</string>
    <string name="Preference">Preference</string>
    <string name="Language">English</string>
    <string name="ChangeLan">Change Language</string>
    <string name="StudentID">Student ID</string>
    <string name="CompetencyHead">Competency Report</string>
    <string name="BarchartDesc">Competency Barchart</string>
    <string name="TrackRank">Track Ranking</string>
    <string name="Track1" translatable="false">TrackNumberOne</string>
    <string name="Track2" translatable="false">TrackNumberTwo</string>
    <string name="Track3" translatable="false">TrackNumberThree</string>
    <string name="Track4" translatable="false">TrackNumberFour</string>

    <string name="QuestionnaireResult">Latest Questionnaire Result</string>
    <string name="TrackName">Track Name</string>
    <string name="ITCS175">Advanced Math</string>
    <string name="ITCS200">C Programming</string>
    <string name="ITCS320">Discrete Structure</string>
    <string name="ITCS125">Applied Statistics</string>
    <string name="ITCS208">JAVA Programming</string>
    <string name="ITCS211">Introduction to Digital System</string>
    <string name="ITCS159">Software Lab</string>
    <string name="ITCS210">Web Programming</string>
    <string name="ITCS222">Computer Organization and Architecture</string>
    <string name="ITCS231">Data Structure and Algorithm Analysis</string>
    <string name="ITCS306">Numerical Method</string>
    <string name="ITCS241">Database Management System</string>
    <string name="ITCS323">Computer Data Communication</string>
    <string name="ITCS335">Introduction to E-Business System</string>
    <string name="ITCS343">Principle of Operating System</string>
    <string name="ITCS381">Introduction to Multimedia</string>
    <string name="ITCS361">Management Information System</string>
    <string name="ITCS371">Introduction to Software Engineering</string>
    <string name="ITCS414">Information Storage and Retrieval</string>
    <string name="ITCS420">Computer Network</string>
    <string name="ITCS443">Parallel and Distributed System</string>
    <string name="ITCS451">Artificial Intelligence</string>
    <string name="NO5" translatable="false">5.</string>
    <string name="Track5" translatable="false">TrackNumberFive</string>
    <string name="Track6" translatable="false">TrackNumberSix</string>
    <string name="Track7" translatable="false">TrackNumberSeven</string>
    <string name="Track8" translatable="false">TrackNumberEight</string>

    <string name="BackToMain">Main Menu</string>
    <string name="Track_Name_Header" translatable="false">Track Name</string>
    <string name="Rank_Header">Score</string>
    <string name="Rank1" translatable="false">01</string>
    <string name="Rank2" translatable="false">02</string>
    <string name="Rank3" translatable="false">03</string>
    <string name="Rank4" translatable="false">04</string>
    <string name="Rank5" translatable="false">05</string>
    <string name="Rank6" translatable="false">06</string>
    <string name="Rank7" translatable="false">07</string>
    <string name="Rank8" translatable="false">08</string>
    <string name="Quiz_Result_Header">Latest Questionnaire Result</string>
    <string name="Track_Name" translatable="false">Track Name</string>

    <string name="Back_To_Main" translatable="false">Main Menu</string>
    <string name="Result_Dialogue">Your result is:</string>
    <string name="ResetDB">Reset Database</string>
    <string name="ConfirmPass">Confirm Password</string>


</resources>
