<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Questionare">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginTop="24dp"
        android:text="Questionare"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="377dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="93dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Questionaire_Label" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Code_Questionaire"
            android:textColor="@android:color/black"
            android:textSize="24sp"
        />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/radioButton11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Questionaire_1"
                    android:onClick="checkButton"/>


                <RadioButton
                    android:id="@+id/radioButton12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/radioButton_2"
                    android:onClick="checkButton"
                    />

                <RadioButton
                    android:id="@+id/radioButton13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="checkButton"
                    android:text="@string/Questionaire_3" />

                <RadioButton
                    android:id="@+id/radioButton14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="checkButton"
                    android:text="@string/Questionaire_4" />

                <RadioButton
                    android:id="@+id/radioButton15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="checkButton"
                    android:text="@string/Questionnaire_5" />

            </LinearLayout>

        </RadioGroup>



        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Math_Questionnaire"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/radioButton21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Questionaire_1"
                    android:onClick="checkButton"/>


                <RadioButton
                    android:id="@+id/radioButton22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/radioButton_2"
                    android:onClick="checkButton"
                    />

                <RadioButton
                    android:id="@+id/radioButton23"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="checkButton"
                    android:text="@string/Questionaire_3" />

                <RadioButton
                    android:id="@+id/radioButton24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="checkButton"
                    android:text="@string/Questionaire_4" />

                <RadioButton
                    android:id="@+id/radioButton25"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="checkButton"
                    android:text="@string/Questionnaire_5" />

            </LinearLayout>

        </RadioGroup>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Questionnaire_Memorise"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <RadioGroup
            android:id="@+id/radioGroup3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/radioButton31"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Questionaire_1"
                    android:onClick="checkButton"/>


                <RadioButton
                    android:id="@+id/radioButton32"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/radioButton_2"
                    android:onClick="checkButton"
                    />

                <RadioButton
                    android:id="@+id/radioButton33"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="checkButton"
                    android:text="@string/Questionaire_3" />

                <RadioButton
                    android:id="@+id/radioButton34"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="checkButton"
                    android:text="@string/Questionaire_4" />

                <RadioButton
                    android:id="@+id/radioButton35"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="checkButton"
                    android:text="@string/Questionnaire_5" />

            </LinearLayout>

        </RadioGroup>

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Questionnaire_Test"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <RadioGroup
            android:id="@+id/radioGroup4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/radioButton41"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Questionaire_1"
                    android:onClick="checkButton"/>


                <RadioButton
                    android:id="@+id/radioButton42"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/radioButton_2"
                    android:onClick="checkButton"
                    />

                <RadioButton
                    android:id="@+id/radioButton43"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="checkButton"
                    android:text="@string/Questionaire_3" />

                <RadioButton
                    android:id="@+id/radioButton44"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="checkButton"
                    android:text="@string/Questionaire_4" />

                <RadioButton
                    android:id="@+id/radioButton45"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="checkButton"
                    android:text="@string/Questionnaire_5" />

            </LinearLayout>

        </RadioGroup>

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Questionnaire_OpenEnd"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <RadioGroup
            android:id="@+id/radioGroup5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/radioButton51"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Questionaire_1"
                    android:onClick="checkButton"/>


                <RadioButton
                    android:id="@+id/radioButton52"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/radioButton_2"
                    android:onClick="checkButton"
                    />

                <RadioButton
                    android:id="@+id/radioButton53"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="checkButton"
                    android:text="@string/Questionaire_3" />

                <RadioButton
                    android:id="@+id/radioButton54"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="checkButton"
                    android:text="@string/Questionaire_4" />

                <RadioButton
                    android:id="@+id/radioButton55"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="checkButton"
                    android:text="@string/Questionnaire_5" />

            </LinearLayout>

        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/next"
        android:layout_width="191dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="116dp"
        android:text="@string/Questionnaire_Next"
        android:textAllCaps="false"
        android:onClick="Next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        />


    <Button
        android:id="@+id/prev"
        android:layout_width="198dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="116dp"
        android:text="@string/Questionnaire_Previous"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="Prev"/>

    <Button
        android:id="@+id/log_out"
        android:layout_width="403dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="40dp"
        android:onClick="Logout"
        android:text="@string/logout_button"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>